Modify file to correct text alignment

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,7 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
-  padding: 10px 20px;
+  padding: 15px;
+  gap: 15px;
+  display: flex;
 }
 
 .icon {
@@ -35,6 +37,7 @@ body {
   align-items: center;
   justify-content: center;
   margin: 10px;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -70,20 +73,15 @@ button.cancel {
   color: royalblue;
 }
 
-.head, .head2{
-  display: flex;
-  justify-content: space-between;
-}
-
-.head2{
-  align-items: center;
-}
-
-button, .header, .text{
-  text-align: left;
-}
-
 .header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   font-weight: bold;
   font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.text {
+  margin-bottom: 10px;
 }
